fix(Frontend): Fixed CSS for Overflow Box

--- a/Frontend/src/components/UserList/UserList.scss
+++ b/Frontend/src/components/UserList/UserList.scss
@@ -4,8 +4,6 @@
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  height: 100%;
-  width: 100%;
 }
 
 .user_label {
