--- a/Frontend/src/pages/CreateGroup/views/GroupMember/GroupMember.scss
+++ b/Frontend/src/pages/CreateGroup/views/GroupMember/GroupMember.scss
@@ -6,7 +6,33 @@
 }
 
 #box_group_member {
+  width: 100%;
+  height: 100%;
+
   display: flex;
   flex-direction: column;
-  gap: 20px;
+  align-items: center;
 }
+
+#box_group_member_list {
+  display: flex;
+  justify-content: center;
+  width: 70%;
+  height: 100%;
+  overflow-y: auto;
+}
+
+#btn_create_group {
+  margin-top: 20px;
+}
+
+#margin_between_fields {
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+#btn_add_member {
+  margin-top: 30px;
+  margin-bottom: 20px;
+}
+
