--- a/Frontend/src/pages/CreateGroup/views/GroupSummary/GroupSummary.scss
+++ b/Frontend/src/pages/CreateGroup/views/GroupSummary/GroupSummary.scss
@@ -5,7 +5,7 @@
   justify-content: center;
   gap: 10px;
   width: 70%;
-  margin: 30px;
+  margin-bottom: 30px;
 }
 
 #btn_copy_join_msg {
@@ -20,6 +20,7 @@
   display: flex;
   justify-content: center;
   width: 70%;
+  height: 100%;
   overflow-y: auto;
 }
 
